--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,82 +1,48 @@
-  
-  GitHub Action for generating a contribution graph with a snake eating your contributions.
-
-
 name: Generate Snake
 
-
-
-  
-  
-  Controls when the action will run. This action runs every 6 hours.
-
-
 on:
-
   schedule:
-
-      # every 6 hours
-
+    # Every 6 hours
     - cron: "0 */6 * * *"
-
-
-
-  
-  
-  This command allows us to run the Action automatically from the Actions tab.
-
-
-workflow_dispatch:
-
-
-
-  
-  
-  The sequence of runs in this workflow:
-
+  workflow_dispatch:
 
 jobs:
-
-  # This workflow contains a single job called "build"
-
   build:
-
-    # The type of runner that the job will run on
-
     runs-on: ubuntu-latest
 
+    steps:
+      # Checkout the repository
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
+      # Setup Node.js environment
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
 
-# Steps represent a sequence of tasks that will be executed as part of the job
-steps:
+      # Generate the snake contribution graph
+      - name: Generate Snake
+        uses: Platane/snk@master
+        id: snake-gif
+        with:
+          github_user_name: akshatmanohar21
+          gif_out_path: dist/github-contribution-grid-snake.gif
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
-# Checks repo under $GITHUB_WORKSHOP, so your job can access it
-  - uses: actions/checkout@v2
+      # Push changes to the output branch
+      - name: Push Changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: output
+          force: true
 
-# Generates the snake  
-  - uses: Platane/snk@master
-    id: snake-gif
-    with:
-      github_user_name: akshatmanohar21
-      # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
-      gif_out_path: dist/github-contribution-grid-snake.gif
-      svg_out_path: dist/github-contribution-grid-snake.svg
-
- # show the status of the build. Makes it easier for debugging (if there's any issues).
-  - run: git status
-
-  # Push the changes
-  - name: Push changes
-    uses: ad-m/github-push-action@master
-    with:
-      github_token: ${{ secrets.GITHUB_TOKEN }}
-      branch: master
-      force: true
-
-  - uses: crazy-max/ghaction-github-pages@v2.1.3
-    with:
-      # the output branch we mentioned above
-      target_branch: output
-      build_dir: dist
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
